<resources>
    <string name="app_name">GameLibrary - Mychal</string>
    <string name="gameDetails">Game Details</string>


    <string name="allConsoles">All Consoles</string>

    <string name="nameMissing">NAME MISSING</string>
    <string name="gameNameFormat" translatable="false">%1$s (%2$d)</string>
    <string name="AllConsoles">All Consoles</string>
    <string name="allGames">All Games</string>
    <string name="myWishlist">My Wishlist</string>
    <string name="myLibrary">My Library</string>
    <string name="loginBtn">LOGIN</string>
    <string name="actionSignOut">actionSignOut</string>
    <string name="actionGetProfile">actionGetProfile</string>
    <string name="myProfile">My Profile</string>
    <string name="createReview">Create Review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="userProfile">User Profile</string>
    <string name="console_windows" translatable="false">Windows</string>
    <string name="console_xbox" translatable="false">Xbox</string>
    <string name="console_playstation" translatable="false">Playstation</string>
    <string name="console_nintendo" translatable="false">Nintendo</string>
    <string name="console_unknown">Unknown Console</string>
    <string name="review_hint">Enter Review Here...</string>
    <string name="publish">Publish</string>
    <string name="review_fail">Failed To Publish Review</string>
    <string name="nintendo_button">Nintendo button</string>
    <string name="xbox_button">Xbox button</string>
    <string name="playstation_button">Playstation Button</string>
    <string name="windows_button">Windows Button</string>
    <string name="price">price</string>
    <string name="relevance">relevance</string>
    <string name="no_shipping">No Shipping Options</string>
    <string name="errorGettingReviews">Error getting Reviews.</string>
    <string name="itemPriceLabel">Price:</string>
    <string name="itemSellerLabel">Sold By:</string>
    <string name="item_image">item image</string>
    <string name="itemShippingLabel">Shipping:</string>
    <string name="details_game_image">details game image</string>
    <string name="search_ebay">search Ebay</string>
    <string name="detail_console_1">detail console 1</string>
    <string name="detail_console_4">detail console 4</string>
    <string name="detail_console_2">detail console 2</string>
    <string name="detail_console_3">detail console 3</string>
    <string name="detail_image_1">detail image 1</string>
    <string name="detail_image_2">detail image 2</string>
    <string name="detail_image_3">detail image 3</string>
    <string name="preferredConsoles">Preferred Consoles</string>
    <string name="button_book">book button</string>
    <string name="wishlist_button">wishlist button</string>
    <string name="displayName">DisplayName</string>
    <string name="userId">UserId</string>
    <string name="library">Library</string>
    <string name="wishlist">Wishlist</string>
    <string name="users">users</string>
    <string name="games">games</string>
    <string name="shareGame">Share Game</string>
    <string name="shareGameMessage">"Check this game out! "</string>
    <string name="shareUser">Share User</string>
    <string name="shareUserMessage">"Look at this users profile!"</string>
    <string name="reviewsUpdate">Reviews Updated.</string>
    <string name="noGameSelected">No Game selected.</string>
    <string name="gameUpdated">Game updated.</string>
    <string name="errorGettingGame">Error getting game.</string>
    <string name="noExsistingGame">Game does not exist.</string>
    <string name="networkError">network error</string>
    <string name="itemNotAdded">No Console selected! Item not added.</string>
    <string name="errorGettingConsole">Error getting consoles.</string>
    <string name="errorGettingLibrary">Error getting Library.</string>
    <string name="errorGettingWishlist">Error getting Wishlist.</string>
    <string name="libraryAdded">Game added to Library.</string>
    <string name="libraryAddedError">Game not added to Library.</string>
    <string name="libraryRemoved">Game removed from Library.</string>
    <string name="libraryRemovedError">Game not removed from Library.</string>
    <string name="wishlistAdded">Game added to Wishlist.</string>
    <string name="wishlistAddedError">Game not added to Wishlist.</string>
    <string name="wishlistRemoved">Game removed from Wishlist.</string>
    <string name="wishlistRemovedError">Game not removed from Wishlist.</string>
    <string name="noUserLogged">No user logged in.</string>
    <string name="userUpdated">User updated in database.</string>
    <string name="updateDatabaseError">Unable to update the database.</string>
    <string name="imageUploaded">image Uploaded.</string>
    <string name="updateUserError">Couldn\'t update user data.</string>
    <string name="userAuthUpdated">User auth profile updated.</string>
    <string name="userAuthUpdateError">User auth profile not updated.</string>
    <string name="userFound">User found.</string>
    <string name="errorGettingUsers">Error getting users.</string>
    <string name="noUserSelected">No User selected.</string>
    <string name="confirmSignOut">Are you sure you want to log out?</string>
    <string name="cancel">cancel</string>
    <string name="commentDeleted">Comment deleted.</string>
    <string name="writeReviewError">error In Writing Review.</string>
    <string name="noGameFound">No game found.</string>
    <string name="confirmDeleteReview">Are you sure you want to delete Review?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="email">Email</string>
    <string name="emailVerified">Email Verified</string>
    <string name="change">Change</string>
    <string name="noDescription">No Description</string>
    <string name="gameNoName">Game Name Not Found.</string>
    <string name="noControllerSupportFound">\"Controller Support: Unknown \"</string>
    <string name="controllerSupport">\"Controller Support: \"</string>
    <string name="noMultiplayerSupportFound">Multiplayer Support: Unknown</string>
    <string name="multiplayerSupport">\"Multiplayer Support: \"</string>
    <string name="tagLabel">\"Tags: \"</string>
    <string name="unknownGenre">Genre: Unknown</string>
    <string name="genreLabel">\"Genre: \"</string>
    <string name="noDisplayName">No display Name.</string>
    <string name="noUserId">no user Id.</string>
    <string name="unknown">unknown</string>
    <string name="lastLogged">Last Logged In:</string>
    <string name="addText">Please Add Text.</string>
    <string name="failedToGetUpload">Failed to get download URL.</string>

</resources>